@@ -27,24 +27,24 @@ export PLA_TARBALL="phpldapadmin-${PLA_VERSION}.tgz"
 # Install phpLDAPadmin with source tarball.
 export PHPLDAPADMIN_USE_SOURCE='YES'
 
-if [ X"${DISTRO}" == X"FREEBSD" -o X"${DISTRO}" == X'OPENBSD' ]; then
+if [ X"${DISTRO}" == X'DEBIAN' -o X"${DISTRO}" == X'UBUNTU' ]; then
+    # Install phpLDAPadmin via apt repo. 
+    export PHPLDAPADMIN_USE_SOURCE='NO'
+
+    export PLA_HTTPD_ROOT="/usr/share/phpldapadmin"
+    export PLA_HTTPD_ROOT_SYMBOL_LINK="${PLA_HTTPD_ROOT}"
+    export PLA_CONF_DIR="${PLA_HTTPD_ROOT}/config"
+
+elif [ X"${DISTRO}" == X"FREEBSD" -o X"${DISTRO}" == X'OPENBSD' ]; then
     # Install phpLDAPadmin via ports tree.
     export PHPLDAPADMIN_USE_SOURCE='NO'
 
     export PLA_HTTPD_ROOT="${HTTPD_SERVERROOT}/phpldapadmin/htdocs"
     export PLA_HTTPD_ROOT_SYMBOL_LINK="${PLA_HTTPD_ROOT}"
     export PLA_CONF_DIR="${HTTPD_SERVERROOT}/phpldapadmin/config"
+
 else
     export PLA_HTTPD_ROOT="${HTTPD_SERVERROOT}/phpldapadmin-${PLA_VERSION}"
     export PLA_HTTPD_ROOT_SYMBOL_LINK="${HTTPD_SERVERROOT}/phpldapadmin"
     export PLA_CONF_DIR="${PLA_HTTPD_ROOT_SYMBOL_LINK}/config"
-fi
-
-# Debian 6, Ubuntu 10.04, 10.10.
-if [ X"${DISTRO_CODENAME}" == X"squeeze" -o X"${DISTRO_CODENAME}" == X"lucid" ]; then
-    export PHPLDAPADMIN_USE_SOURCE='NO'
-
-    export PLA_HTTPD_ROOT="/usr/share/phpldapadmin"
-    export PLA_HTTPD_ROOT_SYMBOL_LINK="${PLA_HTTPD_ROOT}"
-    export PLA_CONF_DIR="${PLA_HTTPD_ROOT}/config"
 fi
